# qt_cmake_project

./: CMakeLists.txt  README.md
scripts/: make.sh
sources/: main.cpp  mainwindow.cpp  mainwindow.h
tests/: mfta_project_file_v.1.0.json
